--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
         npm install
         npm run build --if-present
         npm test
-      env:
+        echo 'ourkadai.com' > dist/CNAME
+      env: 
         CI: true
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.4.0
