--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/node,sass
 # Edit at https://www.gitignore.io/?templates=node,sass
 
+.idea/
+.DS_Store
+
 ### Node ###
 # Logs
 logs
@@ -98,3 +101,4 @@ dist/
 *.scss.map
 
 # End of https://www.gitignore.io/api/node,sass
+package-lock.json
