--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gurukulam-web",
   "version": "1.0.0",
-  "description": "Gurukulam Web Portal",
+  "description": "Gurukulams Web Portal",
   "author": "Sathish Kumar Thiyagarajan",
   "license": "GPL-3.0",
   "repository": {
@@ -27,34 +27,40 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "autoprefixer": "^10.2.4",
-    "browser-sync": "2.26.13",
+    "bootstrap": "5.0.1",
+    "browser-sync": "^2.26.14",
     "copy-files-from-to": "^3.2.0",
     "eslint": "7.18.0",
-    "html-includes": "^4.3.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "hugo-bin": "^0.71.1",
     "npm-run-all": "4.1.5",
     "onchange": "7.1.0",
     "postcss": "^8.2.7",
     "postcss-cli": "^8.3.1",
-    "precss": "^4.0.0",
+    "precss": "^3.1.2",
+    "prettier": "2.3.0",
     "rimraf": "3.0.2",
-    "rollup": "^2.40.0"
+    "rollup": "^2.40.0",
+    "sass": "1.34.1"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "copy": "copy-files-from-to",
-    "lint": "eslint src/js --ext .js",
     "serve": "browser-sync start --config browser-sync.js",
-    "build:css": "postcss -o dist/css/app.css src/css/*.css",
-    "build:js": "rollup -c",
-    "build:html": "html-includes --src src --dest dist --minify",
-    "build": "run-s clean copy build:*",
+    "build:hugo": "hugo -d ../dist -s site -v",
+    "build:sass": "sass src/scss:dist/css",
+    "build:css": "postcss src/css --dir dist/css",
+    "build": "run-s clean build:*",
+    "watch:hugo": "onchange \"site\" -- run-s build:hugo",
+    "watch:sass": "onchange \"src/scss\" -- run-s build:sass",
     "watch:css": "onchange \"src/css\" -- run-s build:css",
-    "watch:js": "onchange \"src/js\" -- run-s build:js",
-    "watch:html": "onchange \"src/**/*.html\" -- run-s build:html",
     "start": "npm run build && run-p serve watch:*",
     "postinstall": "npm run build"
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "dependencies": {
+    "marked": "^2.1.1"
+  }
 }
