--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Deploy Pages
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
+
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -22,18 +23,15 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        export BUILD_PRODUCTION=Y
         npm install
         npm run build --if-present
         npm test
-      env:
+        echo 'ourkadai.com' > dist/CNAME
+      env: 
         CI: true
     - name: Deploy
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        source: "dist"
-        target: ${{ secrets.TARGET_DIR }}/static
-        strip_components: 1
+      uses: peaceiris/actions-gh-pages@v2.4.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: ./dist
