--- a/site/config/_default/config.toml
+++ b/site/config/_default/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
-title = "Gurukulams School"
+title = "Ourkadai Technologies"
 DefaultContentLanguage = "ta"
 
 [Languages]
