--- a/site/config/_default/config.toml
+++ b/site/config/_default/config.toml
@@ -36,3 +36,7 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 [taxonomies]
   tag = "tags"
+
+[security]
+  [security.funcs]
+    getenv = ['^HUGO_', '^CI$', ' CONTEXT']
