--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   },
   "homepage": "https://github.com/ourkadai/website#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "^2.4.1",
-    "autoprefixer": "^10.2.4",
-    "bootstrap": "5.0.1",
-    "browser-sync": "^2.26.14",
-    "copy-files-from-to": "^3.2.0",
-    "eslint": "7.18.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "hugo-bin": "^0.71.1",
+    "@babel/core": "7.26.10",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-multi-entry": "6.0.1",
+    "@rollup/plugin-node-resolve": "16.0.1",
+    "@rollup/plugin-replace": "6.0.2",
+    "autoprefixer": "10.4.21",
+    "bootstrap": "5.3.5",
+    "browser-sync": "3.0.4",
+    "copy-files-from-to": "3.12.1",
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-import": "2.31.0",
+    "hugo-bin": "0.143.1",
     "npm-run-all": "4.1.5",
     "onchange": "7.1.0",
-    "postcss": "^8.2.7",
-    "postcss-cli": "^8.3.1",
+    "postcss": "8.5.3",
+    "postcss-cli": "11.0.1",
     "precss": "^3.1.2",
-    "prettier": "2.3.0",
-    "rimraf": "3.0.2",
-    "rollup": "^2.40.0",
-    "sass": "1.34.1"
+    "prettier": "3.5.3",
+    "rimraf": "6.0.1",
+    "rollup": "4.39.0",
+    "sass": "1.86.3"
   },
   "scripts": {
     "clean": "rimraf dist",
     "serve": "browser-sync start --config browser-sync.js",
-    "build:hugo": "hugo -d ../dist -s site -v",
+    "build:hugo": "hugo -d ../dist -s site",
     "build:sass": "sass src/scss:dist/css",
     "build:css": "postcss src/css --dir dist/css",
     "build": "run-s clean build:*",
@@ -61,6 +61,6 @@
     "defaults"
   ],
   "dependencies": {
-    "marked": "^2.1.1"
+    "marked": "15.0.8"
   }
 }
